--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 15s
+      interval: 1s  #исправить на проде
       timeout: 5s
       retries: 5
     volumes:
@@ -16,7 +16,7 @@ services:
     env_file:
       - .env-main
     ports:
-      - 5432:5432
+      - 5555:5432
     networks:
       - custom_network
 
