--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,18 @@ services:
     networks:
       - custom_network
 
+  redis:
+    image: redis:7
+    container_name: redis_container
+    restart: always
+    command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
+    volumes:
+      - redisdata:/data
+    ports:
+      - 6379:6379
+    networks:
+      - custom_network
+
   auth-service:
     image: auth-service
     build:
@@ -40,6 +52,7 @@ services:
 
 volumes:
   postgresdata:
+  redisdata:
 
 
 networks:
