Added MessageResponseSchema, summaries and descriptions for endpoints, some new exceptions. Added hot-reload func to Docker. New dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./backend/auth-service/app/migrations:/auth-service/app/migrations
+       - ./backend/auth-service:/auth-service
     networks:
       - custom_network
 
