--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:15
     container_name: postgres_container
-    restart: always
+    restart: on-failure
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 1s  #исправить на проде
@@ -23,7 +23,7 @@ services:
   redis:
     image: redis:7
     container_name: redis_container
-    restart: always
+    restart: on-failure
     command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
     volumes:
       - redisdata:/data
