--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,24 @@ services:
     networks:
       - custom_network
 
+  team-service:
+    image: team-service
+    build:
+      context: ./backend/team-service
+      dockerfile: Dockerfile
+    container_name: team-service
+    env_file:
+      - ./backend/team-service/.env
+    ports:
+      - 8001:8001
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./backend/team-service:/team-service
+    networks:
+      - custom_network
+
 volumes:
   postgresdata:
   redisdata:
